--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -27,8 +27,12 @@ jobs:
         cd ./resources
         touch ./application.yml
         echo "$APPLICATION" > ./application.yml
+        mkdir firebase
+        cd ./firebase
+        echo "$FIREBASE_SDK" > ./jjikmuk-565f5-firebase-adminsdk-jh8u1-9f9aef4cad.json
       env:
         APPLICATION: ${{ secrets.APPLICATION }}
+        FIREBASE_SDK: ${{ secrets.FIREBASE_SDK }}
     
     - name: 🍃 gradle build를 위한 권한을 부여합니다.
       run: chmod +x gradlew
